<resources>
    <string name="app_name">OpenSpot</string>
    <string name="title_activity_maps2">Map</string>
    <string name="google_maps_api">AIzaSyBuQ8aNzH2t7-bkfYUz2llMRTCfRAHvqzU</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="title_home">Home</string>
    <string name="title_reservations">Reservations</string>
    <string name="title_settings">Settings</string>
    <string name="contact_form">Contact Us</string>
    <string name="contact_form_name">Your Name</string>
    <string name="contact_form_email">Your Email</string>
    <string name="contact_form_subject">Subject</string>
    <string name="contact_form_message">Your Message</string>
    <string name="contact_form_button">Send Message</string>
    <string name="contact_form_post_message">Please wait! We\'re sending your message to the support department…
    </string>
    <string name="contact_posted">Your message has been successfully delivered.</string>
    <!--//user profile strings below-->
    <string name="fullName">Full Name</string>
    <string name="email">Email</string>
    <string name="DOB">MM DD YYYY</string>
</resources>

